# TemplateVsVirtual

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bwt.cpp  lz78.cpp
bwt/: bwt.hpp  bwt_builders.hpp  interfaces.hpp  sa_accessors.hpp
lz78/: binary_trie.hpp  consumers.hpp  interfaces.hpp  lz78_ii.hpp  lz78_interface.hpp  lz78_it.hpp  lz78_template.hpp  lz78_ti.hpp  lz78_tt.hpp  tries.hpp
results/: .gitignore  bwt.tex  bwt.txt  lz78.tex  lz78.txt
util/: buffered_reader.hpp  time.hpp  typedefs.hpp
